# RPI-Pico-SD-Driver

./: README.md
src/: CMakeLists.txt  main copy.c  main.c  sd_maxim.c  sd_maxim.h
src/test/: CMakeCache.txt  Makefile  cmake_install.cmake
src/test/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
src/test/pico-sdk/: Makefile  cmake_install.cmake
src/test/pico-sdk/docs/: Makefile
src/test/pico-sdk/src/: Makefile  cmake_install.cmake
src/test/pico-sdk/src/common/: Makefile  cmake_install.cmake
src/test/pico-sdk/src/common/boot_picoboot/: Makefile
src/test/pico-sdk/src/common/boot_uf2/: Makefile
src/test/pico-sdk/src/common/pico_base/: Makefile
src/test/pico-sdk/src/common/pico_binary_info/: Makefile
src/test/pico-sdk/src/common/pico_bit_ops/: Makefile
src/test/pico-sdk/src/common/pico_divider/: Makefile
src/test/pico-sdk/src/common/pico_stdlib/: Makefile
src/test/pico-sdk/src/common/pico_sync/: Makefile
src/test/pico-sdk/src/common/pico_time/: Makefile
src/test/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
src/test/pico-sdk/src/common/pico_util/: Makefile
src/test/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
src/test/pico-sdk/src/rp2040/hardware_regs/: Makefile
src/test/pico-sdk/src/rp2040/hardware_structs/: Makefile
src/test/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
src/test/pico-sdk/src/rp2_common/boot_stage2/: Makefile
src/test/pico-sdk/src/rp2_common/cmsis/: Makefile
src/test/pico-sdk/src/rp2_common/hardware_adc/: Makefile
src/test/pico-sdk/tools/: Makefile
(+59 files in other folders)
